   
===========
Changes log  
===========

- @version-full@ (@release-date@)

- 2.2 Release Candidate 4 (03/18/2014)
    - Enhancements
      - Updated swagger extension based on swagger 2.10 version, issue #827.
    - Bug fixed
      - ServerResource doesn't throw away empty response entities anymore, issue #848.
        Reported by Arjohn Kampman and Marcel Hellkamp.
      - DefaultSslContextFactory doesn't handle
        enabledCipherSuites/enabledProtocols parameters properly, issue #853.
        Reported and contributed by Jonathan Keljo.
      - Android NIO server SSL handshake hangs, issue #851.
        Reported and contributed by Jonathan Keljo.
      - NIO SSL server infinite loops on close-notify, issue #862.
        Reported and contributed by Jonathan Keljo.
    - Misc
      - Automatic build using Travis
        (https://travis-ci.org/restlet/restlet-framework-java)

- 2.2 Release Candidate 3 (03/04/2014)
    - Enhancements
      - Add JSON media types. Reported and contributed by Jack Jones.
      - Moved all the remaining NIO logic from previous internal HTTP connector to the
        org.restlet.ext.nio. This will help reduce the org.restlet.jar file size.
    - Bug fixed
      - Issue #818: Call.isBroken does not detect Tomcat ClientAbortException.
        Reported and contributed by Jeremy Gustie.
      - Issue #847: DELETE responses send 200 status without any entity, whereas it 
        should be 204.
      - Issue #805: The NioUtils.copy(..) logic that sometimes created Cyclic barrier 
        exceptions has been moved as well and replaced with the older and more stable 
        logic that was in place in version 2.1.0 and older releases.
        Reported by Wim Jongman.

- 2.2 Release Candidate 2 (02/18/2014)
    - Enhancements
      - Allow Delete methods with entities, issue #841.
      - Allow configuring HttpClient's HostnameVerifier, issue #246.
        Reported and contributed by Philippe Laflamme.