@@ -48,59 +48,58 @@ import org.restlet.Context;
 /**
  * Jetty SSL context factory based on a Restlet SSL context one.
  * 
- * 
  * @author Jerome Louvel
  */
 public class RestletSslContextFactory extends SslContextFactory {
 
-    /**
-     * Constructor.
-     * 
-     * @param restletSslContextFactory
-     *            The Restlet SSL context factory to leverage.
-     * @throws Exception
-     */
-    public RestletSslContextFactory(
-            org.restlet.engine.ssl.SslContextFactory restletSslContextFactory)
-            throws Exception {
-        setSslContext(restletSslContextFactory.createSslContext());
-    }
+	/**
+	 * Constructor.
+	 * 
+	 * @param restletSslContextFactory
+	 *            The Restlet SSL context factory to leverage.
+	 * @throws Exception
+	 */
+	public RestletSslContextFactory(
+			org.restlet.engine.ssl.SslContextFactory restletSslContextFactory)
+			throws Exception {
+		setSslContext(restletSslContextFactory.createSslContext());
+	}
 
-    @Override
-    public void checkKeyStore() {
-        try {
-            if (getSslContext() == null) {
-                super.checkKeyStore();
-            }
-        } catch (IllegalStateException e) {
-            Context.getCurrentLogger().log(Level.FINE,
-                    "Unable to check Jetty SSL keystore", e);
-        }
-    }
+	@Override
+	public void checkKeyStore() {
+		try {
+			if (getSslContext() == null) {
+				super.checkKeyStore();
+			}
+		} catch (IllegalStateException e) {
+			Context.getCurrentLogger().log(Level.FINE,
+					"Unable to check Jetty SSL keystore", e);
+		}
+	}
 
-    @Override
-    public SSLEngine newSslEngine() {
-        return getSslContext().createSSLEngine();
-    }
+	@Override
+	public SSLEngine newSslEngine() {
+		return getSslContext().createSSLEngine();
+	}
 
-    @Override
-    public SSLEngine newSslEngine(String host, int port) {
-        return getSslContext().createSSLEngine(host, port);
-    }
+	@Override
+	public SSLEngine newSslEngine(String host, int port) {
+		return getSslContext().createSSLEngine(host, port);
+	}
 
-    @Override
-    public SSLServerSocket newSslServerSocket(String host, int port, int backlog)
-            throws IOException {
-        SSLServerSocketFactory factory = getSslContext()
-                .getServerSocketFactory();
-        return (SSLServerSocket) ((host == null) ? factory.createServerSocket(
-                port, backlog) : factory.createServerSocket(port, backlog,
-                InetAddress.getByName(host)));
-    }
+	@Override
+	public SSLServerSocket newSslServerSocket(String host, int port, int backlog)
+			throws IOException {
+		SSLServerSocketFactory factory = getSslContext()
+				.getServerSocketFactory();
+		return (SSLServerSocket) ((host == null) ? factory.createServerSocket(
+				port, backlog) : factory.createServerSocket(port, backlog,
+				InetAddress.getByName(host)));
+	}
 
-    @Override
-    public SSLSocket newSslSocket() throws IOException {
-        return (SSLSocket) getSslContext().getSocketFactory().createSocket();
-    }
+	@Override
+	public SSLSocket newSslSocket() throws IOException {
+		return (SSLSocket) getSslContext().getSocketFactory().createSocket();
+	}
 
 }
